--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ nltk = "^3.8.1"
 python-dotenv = "^1.0.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.3.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
